# mnemosyne-core

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: USER_GUIDE.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  api.ts  display.ts  styles.css
mnemosyne_core/: __init__.py  agent.py  api.py  config.py  db.py  evals.py  jobs.py  main.py  memory.py  model_client.py  models.py  skills.py  tools.py  vectors.py
tests/: test_agent.py  test_api.py  test_memory.py  test_model_client.py  test_skills.py  test_tools.py
